--- a/control
+++ b/control
@@ -1,9 +1,9 @@
 Package: funskydev.nbn2
 Name: NoBannerName2
-Version: 0.1
+Version: 1.0
 Architecture: iphoneos-arm
 Description: Tweak that hides the title of notification banners.
 Maintainer: Funsky Dev
 Author: Funsky Dev
 Section: Tweaks
-Depends: mobilesubstrate
+Depends: mobilesubstrate, firmware (<= 14)
